# AdventOfCode2022

./: .clang-format  .gitignore  CMakeLists.txt  README.md  vcpkg.json
.github/workflows/: ci.yml  cmake.yml
InputFiles/: day13input_example5.txt
Source/: AdventOfCode2022.cpp  AdventOfCode2022.h  CMakeLists.txt  DailyTask.h  Day1.cpp  Day12.h  Day14.cpp  Day14.h  Day2.cpp  Day4.cpp
Source/Day11/: Day11.h
Source/Day13/: Day13.cpp  Day13.h  Packet.hpp
Source/Day7/: Day7.h  Directory.cpp  Directory.h  File.h
Source/Day8/: Day8.cpp  Day8.h  Grid.h
Source/Day9/: Day9.cpp  Day9.h  Point.hpp
docs/: day16.plantuml  day16_example.plantuml
include/: AdventOfCode2022.h  DailyTask.h  Day1.h  Day10.h  Day11.h  Day12.h  Day13.h  Day14.h  Day15.h  Day16.h  Day2.h  Day3.h  Day4.h  Day5.h  Day6.h  Day7.h  Day8.h  Day9.h  Directory.h  File.h  Grid.h  Grid.hpp  Line.hpp  Monkey.h  Packet.hpp  Point.hpp  Rope.hpp  Utils.hpp
include/utils/: Directory.h  File.h  Grid.hpp  Helpers.hpp  Line.hpp  Monkey.h  Packet.hpp  Point.hpp  Rope.hpp
include/utils/graphs/: Algorithms.hpp  Edge.hpp  Graph.hpp  Node.hpp
res/: day13input.txt  day13input_example2.txt  day13input_example3.txt  day13input_example4.txt
src/: AdventOfCode2022.cpp  CMakeLists.txt  Day1.cpp  Day10.cpp  Day11.cpp  Day12.cpp  Day13.cpp  Day14.cpp  Day15.cpp  Day16.cpp  Day2.cpp  Day3.cpp  Day4.cpp  Day5.cpp  Day6.cpp  Day7.cpp  Day8.cpp  Day9.cpp  Directory.cpp
test/: CMakeLists.txt  GridTests.cpp  PointTests.cpp  TestModule.cpp
